--- a/index.html
+++ b/index.html
@@ -37,8 +37,8 @@
 <!--                <label for="text_inline_create">ДАТА СОЗДАНИЯ<i class="material-icons right">date_range</i></label>-->
             </div>
             <div class="input-field inline table-navbar__date">
-                <input id="text_inline_finished" type="text" class="table-navbar__date datepicker">
-                <label for="text_inline_finished">ДАТА ЗАКРЫТИЯ<i class="material-icons right">date_range</i></label>
+                <input id="text_inline_finished" type="text" class="table-navbar__date datepicker" placeholder="ДАТА ЗАКРЫТИЯ">
+<!--                <label for="text_inline_finished">ДАТА ЗАКРЫТИЯ<i class="material-icons right">date_range</i></label>-->
             </div>
             <div class="table-navbar__name waves-effect">Сумма по актам</div>
             <div class="table-navbar__name waves-effect">Выручка</div>
